packages/kubernetes/static.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static
  abels:
    app: static
spec:
  selector:
    matchLabels:
      app: static
  replicas: 1
  template:
    metadata:
      labels:
        app: static
    spec:
      containers:
      - name: static
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: static
spec:
  selector:
    app: static
  ports:
    - name: http
      port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static-ingress
spec:
  rules:
  - host: static.dev.ox.nlr.app
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: static
            port:
              number: 80
